# openfga-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile  release-plz.toml
.cargo/: config.toml
.github/workflows/: check.yml  release.yml
src/: lib.rs
src/authentication/: bearer_token.rs  client_credentials.rs  mod.rs
