[package]
name = "openfga-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A package for easily creating ID types for usage with surrealdb"
repository = "https://github.com/liamwh/openfga-rs.git"
authors = ["Liam Woodleigh-Hardinge", "liam.woodleigh@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = { version = "~0.11", features = ["tls"] }
prost = { version = "~0.12", features = ["std", "prost-derive"] }
prost-types = "~0.12"
prost-wkt = "~0.5"
prost-wkt-types = "~0.5"
serde = { version = "~1.0", features = ["derive"] }

[build-dependencies]
# tonic-build = { version = "~0.11", features = ["prost-build"] }
tonic-build = { version = "~0.11" }
tonic-buf-build = { version = "~0.2" }
prost-build = "~0.12"
prost-wkt-build = "~0.5"
