[package]
name = "openfga-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust SDK for OpenFGA"
repository = "https://github.com/liamwh/openfga-rs.git"
authors = ["Liam Woodleigh-Hardinge", "liam.woodleigh@gmail.com"]
include = [
    "/src",
    "**/**.rs",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "!tmp/**",
    "/proto/**",
]
resolver = "2"

[dependencies]
tonic = { version = "~0.12", features = ["tls"] }
prost = { version = "~0.12", features = ["std", "prost-derive"] }
prost-types = "~0.12"
prost-wkt = "~0.5"
prost-wkt-types = "~0.5"
serde = { version = "~1.0", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "~0.11" }
prost-build = "~0.12"
prost-wkt-build = "~0.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata.cyclonedx]
included_dependencies = "all"
